added ideas on how to improve on the game

--- a/python-basics/lesson-2024-10-15/Python_OOP_Advanced-02.ipynb
+++ b/python-basics/lesson-2024-10-15/Python_OOP_Advanced-02.ipynb
@@ -1532,7 +1532,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "516518b8",
+   "id": "14c06499",
    "metadata": {},
    "outputs": [
     {
@@ -1553,7 +1553,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "77aadab4",
+   "id": "97211b8f",
    "metadata": {},
    "outputs": [
     {
@@ -2112,7 +2112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6264470a",
+   "id": "fdfbd7d6",
    "metadata": {},
    "source": [
     "## Build the winning dice rule\n",
@@ -2128,7 +2128,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d7972c50",
+   "id": "e70e981e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2195,7 +2195,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1a745eae",
+   "id": "bd25251e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2205,7 +2205,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "7590895b",
+   "id": "d3203c17",
    "metadata": {},
    "outputs": [
     {
@@ -2225,7 +2225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcddae80",
+   "id": "d01f850f",
    "metadata": {},
    "source": [
     "### Dice Game Base\n",
@@ -2237,7 +2237,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "f4ce28ba",
+   "id": "edc69f73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2270,7 +2270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6125dde",
+   "id": "4d73defe",
    "metadata": {},
    "source": [
     "## DummyDiceGame\n",
@@ -2288,7 +2288,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "f698b58a",
+   "id": "b25e4ea6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2328,7 +2328,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "e3e5807c",
+   "id": "1d9db74d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2347,7 +2347,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "36ff98d1",
+   "id": "c027dac2",
    "metadata": {},
    "outputs": [
     {
@@ -2364,8 +2364,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "id": "302a1ac5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**********\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('*'*10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7f6415b",
+   "metadata": {},
+   "source": [
+    "## Your Turn - Create your own Dice Game\n",
+    "Using the abstract base classes `Die` and `DiceGameBase`, create your own exiting game, which your own rules. \n",
+    "\n",
+    "You can create your own `DiceBoard` and many `Dice` as you want. Or you can use what is there already.\n",
+    "\n",
+    "Some ideas here\n",
+    "\n",
+    "- Implement a different winning rule\n",
+    "- Introduce two or more players to compete together\n",
+    "- Add more features a player can peform to increase his chances of winning.\n",
+    "    - For example, the player could decide to remove a die from the diceboard.\n",
+    "- Add a way to exit the game, even when you still have roll trials.\n",
+    "- Add ways to multiply the dice. For example, if you have `[2,4]`, you can multiply by 2 so that you have `[2, 4, 2, 4]`.\n",
+    "- Add sound effect so that when the game is playing the sound plays\n",
+    "- Use a GUI. Rather than running it on the terminal, you can build an attractive GUI with [PyGame](https://www.pygame.org/news) for example.\n",
+    "- Use animations either in the CLI or GUI. For example, it'll be nice to see the dice rolling in real-time."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "0277aa93",
+   "id": "2d48414b",
    "metadata": {},
    "outputs": [],
    "source": []
