added recommended design patterns

--- a/python-basics/lesson-2024-10-17/Python_OOP_Advanced-04.ipynb
+++ b/python-basics/lesson-2024-10-17/Python_OOP_Advanced-04.ipynb
@@ -489,11 +489,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Recommended Design Pattern\n",
+    "Recommendations from [here](https://www.youtube.com/results?search_query=recommended+design+patterns)\n",
+    "- Singleton\n",
+    "- Facade\n",
+    "- Bridge/Adapter\n",
+    "- Strategy\n",
+    "- Observer\n",
+    "\n",
+    "Great [website](https://refactoring.guru/design-patterns) to learn more."
+   ]
   }
  ],
  "metadata": {
