added more to the notes

--- a/python-basics/lesson-2024-10-17/Python_OOP_Advanced-04.ipynb
+++ b/python-basics/lesson-2024-10-17/Python_OOP_Advanced-04.ipynb
@@ -10,6 +10,8 @@
     "> Design patterns that governs the effective communication and the assignment of responsibilities among objects.\n",
     "\n",
     "### Strategy Pattern\n",
+    "> Strategy is a behavioral design pattern that lets you define a family of algorithms, put each of them into a separate class, and make their objects interchangeable.\n",
+    "\n",
     "- Most problems have more than one solutions. And the choice of solution can be based on some criteria.\n",
     "\n",
     "### Example: Sorting problem\n",
@@ -370,7 +372,9 @@
     "\n",
     "> A Red Head Duck `has a` FlyingWithWings Behavior\n",
     "\n",
-    "-> Assign the behaviors to attributes rather than inheriting."
+    "Kevin decides to go in for Composition because its `has a/an` relationship is perfect in this context.\n",
+    "\n",
+    "- Composition involves assigning the behaviors to attributes rather than inheriting."
    ]
   },
   {
@@ -484,8 +488,19 @@
     }
    ],
    "source": [
+    "# Modify the fly behavior on runtime\n",
     "rubber_duck.fly_behavior = FlyWithWings()\n",
     "rubber_duck.fly()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "Following the idea of Strategy pattern, we have identified areas of our code that change frequently and have isolated them in separate classes, at the same time, providing room for expansion.\n",
+    "\n",
+    "The `Fly` and `Quack` behaviors were changing frequently, so we separated them into their respective classes."
    ]
   },
   {
