added link to exercise and resources

--- a/python-basics/lesson-2024-10-29/python_testing_with_pytest.ipynb
+++ b/python-basics/lesson-2024-10-29/python_testing_with_pytest.ipynb
@@ -205,6 +205,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Resources on Pytest\n",
+    "- [Effective Python Testing With Pytest](https://realpython.com/pytest-python-testing/)\n",
+    "- [Pytest Documentation](https://docs.pytest.org/en/stable/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
