modified 19th Nov notes

--- a/python-basics/lesson-2024-11-19/python_tool_libraries.ipynb
+++ b/python-basics/lesson-2024-11-19/python_tool_libraries.ipynb
@@ -4,6 +4,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Namespace Packages\n",
+    "## Exercise\n",
+    "- Create two namespace packages called\n",
+    "    - `calculator_old`\n",
+    "    - `calculator_new`\n",
+    "\n",
+    "- Unify the two namespace packages such that we can do the following\n",
+    "\n",
+    "```python\n",
+    "# add -> calculator_old\n",
+    "# sub -> calculator_new\n",
+    "from calc import add, sub\n",
+    "\n",
+    "print(add.addition(2,3)) # 5\n",
+    "print(sub.subtract(5,4)) # 1\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Publish a Package on PyPi\n",
     "\n",
     "In this example, we will use the `testPypi` for testing purposes.\n",
