added 21th Nov notes

--- a/python-basics/lesson-2024-11-19/python_tool_libraries.ipynb
+++ b/python-basics/lesson-2024-11-19/python_tool_libraries.ipynb
@@ -97,9 +97,14 @@
     "- Install `Twine` with `python3 -m pip install --upgrade twine`.\n",
     "\n",
     "### Push distribution to TestPyPi\n",
-    "`python3 -m twin upload -r[--repository] testpypi dist/*`\n",
+    "`python3 -m twine upload -r[--repository] testpypi dist/*`\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
