added 27th Nov notes

--- a/databases/lesson-2024-11-26/databases_overview.ipynb
+++ b/databases/lesson-2024-11-26/databases_overview.ipynb
@@ -97,7 +97,7 @@
     "- `network DBMS`\n",
     "- `object-oriented DBMS`.\n",
     "\n",
-    "### Benefits of DMS\n",
+    "### Benefits of DBMS\n",
     "- `Data security`\n",
     "- `Data integrity`\n",
     "- `crash recovery`\n",
