added 28th Nov notes

--- a/databases/lesson-2024-11-28/database_basic_usage.ipynb
+++ b/databases/lesson-2024-11-28/database_basic_usage.ipynb
@@ -6,8 +6,261 @@
    "source": [
     "# Data Definition Language\n",
     "\n",
-    "## Understanding data types\n"
+    "## Understanding data types\n",
+    "- `DATE`: Used to store a calendar date with year, month and day\n",
+    "    - The format `YYYY-MM-DD`: `2024-11-28`\n",
+    "    - The format `YYYY/MM/DD`\n",
+    "- `BOOLEAN`: Store boolean values: `true`, `false`. **NB**: All lowercase.\n",
+    "    - Also abbreviated `BOOL`\n",
+    "    - 0, 1, 2,....\n",
+    "        - 0 = false, 1,2... = true\n",
+    "    - '0', '1', '2',....\n",
+    "        - '0' = true\n",
+    "        - '1' = false\n",
+    "        - '2',... = error\n",
+    "    - 't', 'f',..\n",
+    "        - 't' = true\n",
+    "        - 'f' = false\n",
+    "        - 'a',... = error\n",
+    "    - true, false\n",
+    "\n",
+    "- `Characters`: This will store a desired-length of character string\n",
+    "    - `VARCHAR(n)`: Store a variable-length of character string\n",
+    "        - It has the long name `CHARACTER VARYING(n)`\n",
+    "        - `name VARCHAR(4)`: insert `ab`: `ab`\n",
+    "    - `CHARACTER(n)`: This will store a fixed-length of `n` character strings\n",
+    "        - It is abbreviated as `CHAR(n)`\n",
+    "        - `name CHAR(4)`. insert `ab`: \n",
+    "\n",
+    "- `SERIAL`: It stores an auto-incrementing integer.\n",
+    "    - It is postgres specific.\n",
+    "    - `SERIAL` -> `INT`\n",
+    "    - `BIGSERIAL` -> `BIGINT`\n",
+    "    - `SMALLSERIAL` -> `SMALLINT`\n",
+    "\n",
+    "    \n",
+    "### Constraint\n",
+    "- `PRIMARY KEY`:\n",
+    "    - Make it unique\n",
+    "    - Make it to be non null (not empty)\n",
+    "    - Create an index\n",
+    "    - **NB**: commonly sued in linking other tables via foreign keys.\n",
+    "\n",
+    "\n",
+    "### Student Enrollment Table\n",
+    "**NB**: A student can enroll in one or more classes.\n",
+    "\n",
+    "- id: `SERIAL PRIMARY KEY`\n",
+    "- student_id: `INT` \n",
+    "- student_first_name: `VARCHAR(100)`\n",
+    "- student_last_name: `VARCHAR(100)`\n",
+    "- class_id: `INT`\n",
+    "- class_name: `VARCHAR(100)`\n",
+    "- semester `SM01`, `SM02`: `CHAR(4)`\n",
+    "- feedback: `TEXT`\n",
+    "- enrollment_fee: `345.21`: `NUMERIC(5,2)`\n",
+    "- enrollment_date: `DATE`\n",
+    "- student_is_active: `BOOL`\n",
+    "\n",
+    "### Exercise\n",
+    "- Build the table above.\n",
+    "\n",
+    "```sql\n",
+    "-- CREATE THE TABLE student_enrollment\n",
+    "-- TODO: create this table in the student database.\n",
+    "--- CREATE DATABASE student;\n",
+    "--- Connect to the database student;\n",
+    "CREATE TABLE student_enrollment (\n",
+    "    id SERIAL PRIMARY KEY,\n",
+    "    student_id INT,\n",
+    "    student_first_name VARCHAR(100),\n",
+    "    student_last_name VARCHAR(100),\n",
+    "    class_id INT,\n",
+    "    class_name VARCHAR(100),\n",
+    "    semester  CHAR(4),\n",
+    "    feedback TEXT,\n",
+    "    enrollment_fee  NUMERIC(5,2),\n",
+    "    enrollment_date DATE,\n",
+    "    student_is_active BOOLEAN\n",
+    ");\n",
+    "\n",
+    "```\n",
+    "\n",
+    "### Self-study\n",
+    "More data types we will visit soon\n",
+    "- `time without time zone` or `time`\n",
+    "- `time with time zone` or `timez`\n",
+    "- `timestamp without time zone` or `timestamp`\n",
+    "- `timestamp with time zone` or `timestampz`\n",
+    "- `money`\n",
+    "- `json`\n",
+    "- `interval`\n",
+    "- `uuid`\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## DROP TABLE\n",
+    "\n",
+    "```sql\n",
+    "DROP TABLE <table-name>\n",
+    "-- drop with condition\n",
+    "DROP TABLE IF EXISTS <table-name>\n",
+    "```\n",
+    "\n",
+    "## Constraints\n",
+    "> Limitations or restrictions\n",
+    "\n",
+    "- CHECK\n",
+    "- NOT NULL\n",
+    "- UNIQUE\n",
+    "- PRIMARY KEY\n",
+    "- `FOREIGN KEY`\n",
+    "\n",
+    "### CHECK\n",
+    "Evaluate whether data falls within values we specify\n",
+    "- syntax: `CHECK(<column-name> <condition>)`\n",
+    "- For example, limit the `age` of students between `18` and `20`\n",
+    "    - `CHECK(age BETWEEN 18 AND 20)`\n",
+    "    - `CHECK(age > 17 AND age < 21)`\n",
+    "    - `CHECK(age IN (18, 19, 20))`\n",
+    "**Exercise**\n",
+    "\n",
+    "```sql\n",
+    "-- Make sure the enrollment fee is exactly `345.21`\n",
+    "CHECK(enrollment_fee = 345.21)\n",
+    "-- Make sure the semester is either `SM01` or `SMO2`\n",
+    "CHECK(semester IN ('SM01', 'SM02'))\n",
+    "-- Make sure the enrollment date is between `2024-02-12` and `2024-03-12`\n",
+    "CHECK(enrollment_date  BETWEEN '2024-02-12' AND '2024-03-12')\n",
+    "```\n",
+    "\n",
+    "### Apply Check in student_enrollment table\n",
+    "\n",
+    "```sql\n",
+    "-- CREATE THE TABLE student_enrollment\n",
+    "-- TODO: create this table in the student database.\n",
+    "--- CREATE DATABASE student;\n",
+    "--- Connect to the database student;\n",
+    "CREATE TABLE student_enrollment (\n",
+    "    id SERIAL PRIMARY KEY,\n",
+    "    student_id INT,\n",
+    "    student_first_name VARCHAR(100),\n",
+    "    student_last_name VARCHAR(100),\n",
+    "    class_id INT,\n",
+    "    class_name VARCHAR(100),\n",
+    "    semester  CHAR(4),\n",
+    "    feedback TEXT,\n",
+    "    enrollment_fee  NUMERIC(5,2),\n",
+    "    enrollment_date DATE,\n",
+    "    student_is_active BOOLEAN,\n",
+    "\n",
+    "    -- checks\n",
+    "    CHECK(enrollment_fee = 345.21),\n",
+    "    CHECK(semester IN ('SM01', 'SM02')),\n",
+    "    CHECK(enrollment_date  BETWEEN '2024-02-12' AND '2024-03-12')\n",
+    ");\n",
+    "\n",
+    "```\n",
+    "\n",
+    "### Self-Study\n",
+    "- Research various operators used in `CHECK`\n",
+    "\n",
+    "### NOT NULL\n",
+    "- Makes sure the column doesn't contain `NULL` values\n",
+    "- Fields are allowed to be empty or null by default\n",
+    "\n",
+    "```sql\n",
+    "-- CREATE THE TABLE student_enrollment\n",
+    "-- TODO: create this table in the student database.\n",
+    "--- CREATE DATABASE student;\n",
+    "--- Connect to the database student;\n",
+    "CREATE TABLE student_enrollment (\n",
+    "    id SERIAL PRIMARY KEY,\n",
+    "    student_id INT NOT NULL,\n",
+    "    student_first_name VARCHAR(100),\n",
+    "    student_last_name VARCHAR(100),\n",
+    "    class_id INT NOT NULL,\n",
+    "    class_name VARCHAR(100),\n",
+    "    semester  CHAR(4),\n",
+    "    feedback TEXT,\n",
+    "    enrollment_fee  NUMERIC(5,2) NOT NULL,\n",
+    "    enrollment_date DATE,\n",
+    "    student_is_active BOOLEAN,\n",
+    "\n",
+    "    -- checks\n",
+    "    CHECK(enrollment_fee = 345.21),\n",
+    "    CHECK(semester IN ('SM01', 'SM02')),\n",
+    "    CHECK(enrollment_date  BETWEEN '2024-02-12' AND '2024-03-12')\n",
+    ");\n",
+    "```\n",
+    "\n",
+    "## UNIQUE\n",
+    "- If you want to prevent duplicate value in a column\n",
+    "- Syntax:\n",
+    "    - `<column-name> UNIQUE`\n",
+    "    - `UNIQUE(<column-1>[,<column-2,....,<column-n])`\n",
+    "\n",
+    "```sql\n",
+    "-- CREATE THE TABLE student_enrollment\n",
+    "-- TODO: create this table in the student database.\n",
+    "--- CREATE DATABASE student;\n",
+    "--- Connect to the database student;\n",
+    "CREATE TABLE student_enrollment (\n",
+    "    id SERIAL PRIMARY KEY,\n",
+    "    student_id INT NOT NULL,\n",
+    "    student_first_name VARCHAR(100),\n",
+    "    student_last_name VARCHAR(100),\n",
+    "    class_id INT NOT NULL,\n",
+    "    class_name VARCHAR(100),\n",
+    "    semester  CHAR(4),\n",
+    "    feedback TEXT,\n",
+    "    enrollment_fee  NUMERIC(5,2) NOT NULL,\n",
+    "    enrollment_date DATE,\n",
+    "    student_is_active BOOLEAN,\n",
+    "\n",
+    "    -- checks\n",
+    "    CHECK(enrollment_fee = 345.21),\n",
+    "    CHECK(semester IN ('SM01', 'SM02')),\n",
+    "    CHECK(enrollment_date  BETWEEN '2024-02-12' AND '2024-03-12'),\n",
+    "\n",
+    "    -- Unique\n",
+    "    UNIQUE(student_id, class_id)\n",
+    "\n",
+    "    -- Primary key\n",
+    "    --PRIMARY KEY(id)\n",
+    ");\n",
+    "```\n",
+    "\n",
+    "### PRIMARY KEY\n",
+    "- Indirectly enforces these two constraints\n",
+    "    - UNIQUE\n",
+    "    - NOT NULL\n",
+    "\n",
+    "- We have two categories\n",
+    "    -`Single column PRIMARY KEY`: Which column can uniquely identify rows in your table.\n",
+    "        - syntax:\n",
+    "            - `<column-name> PRIMARY KEY`.\n",
+    "            - `PRIMARY KEY(<column-1>)`\n",
+    "    - `Multi-column PRIMARY KEY`: Are there more than one column that collectively identify each row?\n",
+    "        - Also called `Composite PRIMARY KEY`\n",
+    "        - For example: Temp collector database\n",
+    "            - `city`, `temp_date`, `high_temp`\n",
+    "            ```txt\n",
+    "                Texas, 2023-05-02, 45\n",
+    "                Texas, 2023-06-10, 60\n",
+    "                New York, 2023-05-02, 70\n",
+    "                Texas, 2023-05-08, 60\n",
+    "            ```\n",
+    "            - `PRIMARY KEY(city, temp_date)`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
