added 29th Nov notes

--- a/databases/lesson-2024-11-28/database_basic_usage.ipynb
+++ b/databases/lesson-2024-11-28/database_basic_usage.ipynb
@@ -254,7 +254,14 @@
     "                New York, 2023-05-02, 70\n",
     "                Texas, 2023-05-08, 60\n",
     "            ```\n",
-    "            - `PRIMARY KEY(city, temp_date)`"
+    "            - `PRIMARY KEY(city, temp_date)`\n",
+    "- We have two types\n",
+    "    - `NATURAL PRIMARY KEY`\n",
+    "        - A column or group that represent your data\n",
+    "    - `SURROGATE PRIMARY KEY`\n",
+    "        - A column or group of columns introduced with artificial values to make up the primary key.\n",
+    "            - `id`\n",
+    "            - `uuid`.\n"
    ]
   },
   {
