added 3th Dec notes

--- a/databases/lesson-2024-11-29/database_basic_usage.ipynb
+++ b/databases/lesson-2024-11-29/database_basic_usage.ipynb
@@ -228,6 +228,28 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "```sql\n",
+    "DROP DATABASE IF EXISTS dci;\n",
+    "CREATE DATABASE dci;\n",
+    "\n",
+    "\\c dci -- doesn't work when run directly from the terminal. Only works if run from an sql script.\n",
+    "\n",
+    "CREATE SCHEMA company\n",
+    "    CREATE TABLE employee (\n",
+    "        id SERIAL PRIMARY KEY,\n",
+    "        first_name VARCHAR(50) NOT NULL,\n",
+    "        date_of_birth DATE NOT NULL\n",
+    "    );\n",
+    "\n",
+    "ALTER TABLE company.employee \n",
+    "ADD CONSTRAINT employee_date_of_birth_check CHECK (date_of_birth BETWEEN '1990-01-01' AND '2015-01-01');\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
