added 10th Dec notes

--- a/databases/lesson-2024-12-06/database_usage_in_python.ipynb
+++ b/databases/lesson-2024-12-06/database_usage_in_python.ipynb
@@ -108,6 +108,7 @@
     "    - `Insertion Anomaly`:\n",
     "        > Data can't be inserted because of lack of necessary information.\n",
     "    - `Update Anomaly`:\n",
+    "        > A fail in the update will cause inconsistent data in the database.\n",
     "\n",
     "\n",
     "\n",
