added sql scripts

--- a/databases/lesson-2024-12-10/database_usage_in_python.ipynb
+++ b/databases/lesson-2024-12-10/database_usage_in_python.ipynb
@@ -125,7 +125,7 @@
     "\n",
     "\n",
     "**myread**\n",
-    "\n",
+    "- `id` SERIAL PRIMARY KEY\n",
     "- `book_isbn`: CHAR(13) FOREIGN KEY REFERENCES book(isbn)\n",
     "- `reader_username`: VARCHAR(50) FOREIGN KEY REFERENCES reader(username)\n",
     "- `start_read_date`: DATE \n",
@@ -141,6 +141,11 @@
     "- `percentage_read` shouldn't be `100` if `end_read_date` is not set.\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
