added 11th Dec notes

--- a/databases/lesson-2024-12-10/database_usage_in_python.ipynb
+++ b/databases/lesson-2024-12-10/database_usage_in_python.ipynb
@@ -145,6 +145,294 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Query multiple tables\n",
+    "### Exercise\n",
+    "1. Select the `username`, `first_name` and `last_name` of all readers with 100% `percentage_read`\n",
+    "\n",
+    "```sql\n",
+    "SELECT DISTINCT(username), first_name, last_name \n",
+    "FROM reader, my_read\n",
+    "WHERE percentage_read = 100;\n",
+    "```\n",
+    "\n",
+    "2. Select the `username`, `names`(where names is the concatenation of `first_name` and `last_name` ), `published_date` of readers reading books published in 2020\n",
+    "\n",
+    "```python\n",
+    "first_name = 'kevin'\n",
+    "last_name = 'eyong\n",
+    "names = first_name + ' ' + last_name\n",
+    "```\n",
+    "```sql\n",
+    "-- reader\n",
+    "-- book\n",
+    "-- my_read\n",
+    "-- concatenate with ||\n",
+    "\n",
+    "SELECT DISTINCT(username), first_name || ' ' || last_name AS names, published_date\n",
+    "FROM reader, book, my_read\n",
+    "WHERE \n",
+    "    -- all books were checking are read\n",
+    "    book.isbn = my_read.book_isbn\n",
+    "    -- the book was published in 2020\n",
+    "    AND book.published_date = 2021;\n",
+    "```\n",
+    "\n",
+    "## JOINS\n",
+    "- The process known as `table join` allows us to link rows in one table to rows in another tables.\n",
+    "- To connect tables in a query, we can either do it with `JOIN...ON` or `JOIN...USING` statements.\n",
+    "\n",
+    "- Common Syntax\n",
+    "\n",
+    "```sql\n",
+    "SELECT <column-list-from-table-a-and-b>\n",
+    "FROM table_a JOIN table_b\n",
+    "ON table_a.pkey_column = table_b.foreign_key_colum\n",
+    "[WHERE condition];\n",
+    "```\n",
+    "\n",
+    "### Exercise - Using JOIN...ON\n",
+    "1. Select the `username`, `first_name` and `last_name` of all readers with 100% `percentage_read`\n",
+    "\n",
+    "```sql\n",
+    "SELECT DISTINCT(username), first_name, last_name \n",
+    "FROM reader, my_read\n",
+    "WHERE \n",
+    "    username = reader_username AND\n",
+    "    percentage_read = 100;\n",
+    "\n",
+    "-- Using JOIN...ON\n",
+    "SELECT DISTINCT(username), first_name, last_name\n",
+    "FROM reader INNER JOIN my_read\n",
+    "ON username = reader_username\n",
+    "WHERE percentage_read = 100;\n",
+    "```\n",
+    "\n",
+    "### Some Convention\n",
+    "\n",
+    "```sql\n",
+    "/*\n",
+    "No particular order, but by convention, we use the following\n",
+    "\n",
+    "FROM <PK-table> JOIN <FK-table>\n",
+    "ON <PK-table>.<pk> = <FK-table>.<fk>\n",
+    "*/\n",
+    "```\n",
+    "\n",
+    "### USING\n",
+    "- It is common for the PK and FK to have the same name\n",
+    "- It is common to set the basis of the join on the `quality` comparison operator. `=`\n",
+    "\n",
+    "```sql\n",
+    "\n",
+    "ALTER TABLE my_read RENAME COLUMN reader_username TO username;\n",
+    "ALTER TABLE my_read RENAME COLUMN book_isbn TO isbn;\n",
+    "\n",
+    "SELECT DISTINCT(username), first_name, last_name\n",
+    "FROM reader JOIN my_read\n",
+    "USING(username) -- ON reader.username = my_read.username\n",
+    "WHERE percentage_read = 100;\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## JOIN TYPES\n",
+    "We have four different types of JOINS\n",
+    "- INNER \n",
+    "- OUTER\n",
+    "- CROSS\n",
+    "- SELF\n",
+    "\n",
+    "### INNER JOIN or JOIN\n",
+    "> Returns rows from both tables where matching values are found in the joined columns of both tables.\n",
+    "\n",
+    "**When to use**\n",
+    "- When you want to return only records having pair on both side\n",
+    "\n",
+    "## OUTER JOINS\n",
+    "## LEFT JOIN or LEFT OUTER JOIN\n",
+    "> Return rows from the left table, plus rows that match values in the joined column from the right table. If the left table doesn't have any match in the right table, the results shows no values from the right table by displaying blank rows or whatever NULL was set to. `\\pset NULL ''`\n",
+    "\n",
+    "- Left table is prioritized\n",
+    "- Right table is less-prioritized\n",
+    "\n",
+    "**Example**: Select isbn and username from the book and my_read respectively\n",
+    "\n",
+    "```sql\n",
+    "SELECT DISTINCT(book.isbn), username\n",
+    "FROM book LEFT JOIN my_read\n",
+    "USING(isbn);\n",
+    "```\n",
+    "\n",
+    "## RIGHT JOIN or RIGHT OUTER JOIN\n",
+    "Return rows from the RIGHT table, plus rows that match values in the joined column from the LEFT table. If the RIGHT table doesn't have any match in the LEFT table, the results shows no values from the LEFT table by displaying blank rows or whatever NULL was set to. `\\pset NULL ''`\n",
+    "\n",
+    "- RIGHT table is prioritized\n",
+    "- LEFT table is less-prioritized\n",
+    "\n",
+    "```sql\n",
+    "SELECT DISTINCT(book.isbn), username\n",
+    "FROM book RIGHT JOIN my_read\n",
+    "USING(isbn);\n",
+    "```\n",
+    "\n",
+    "**When to use**\n",
+    "- When you want to find missing rows in one of the tables you are joining.\n",
+    "- When we want to find rows that exist in one or few tables among all the tables we are joining.\n",
+    "\n",
+    "```sql\n",
+    "SELECT DISTINCT(book.isbn), username\n",
+    "FROM book LEFT JOIN my_read\n",
+    "USING(isbn)\n",
+    "WHERE username IS NULL;\n",
+    "```\n",
+    "\n",
+    "## FULL OUTER JOIN or FULL JOIN\n",
+    "\n",
+    "```sql\n",
+    "SELECT DISTINCT(book.isbn), username\n",
+    "FROM book FULL JOIN my_read\n",
+    "USING(isbn);\n",
+    "\n",
+    "-- CREATE TABLE reader_identification \n",
+    "\n",
+    "CREATE TABLE reader_identification(\n",
+    "    id SERIAL PRIMARY KEY,\n",
+    "    username VARCHAR(50) UNIQUE REFERENCES reader(username),\n",
+    "    identification_type VARCHAR(30) DEFAULT 'email',\n",
+    "\n",
+    "    CHECK(identification_type IN ('email', 'phone'))\n",
+    ");\n",
+    "\n",
+    "INSERT INTO reader_identification (username, identification_type)\n",
+    "    VALUES('agerrens6', 'email'),\n",
+    "        ('tdefraine7', 'email'),\n",
+    "        ('estoeckle8', 'phone'),\n",
+    "        ('pcarvil9', 'phone');\n",
+    "\n",
+    "\n",
+    "SELECT DISTINCT(my_read.username) reader_username, reader_identification.username identified_username\n",
+    "FROM my_read FULL JOIN reader_identification\n",
+    "USING(username);\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## CROSS JOIN\n",
+    "\n",
+    "> Returns every possible combination of rows from both tables.\n",
+    "\n",
+    "- Cartesian product.\n",
+    "    - table a -> `n` rows\n",
+    "    - table b -> `m` rows\n",
+    "    - = `n * m`\n",
+    "\n",
+    "**When to use**\n",
+    "- We want to send specific products to our warehouses in all location.\n",
+    "\n",
+    "#### Exercise - Create tables `shirt_model` and `shirt_color` and try the `CROSS JOIN`\n",
+    "- Shirts\n",
+    "    - table a: contains different models of shirts\n",
+    "        - model a\n",
+    "        - model b\n",
+    "    - table b: contains different colors\n",
+    "        - red\n",
+    "        - yellow\n",
+    "        - white\n",
+    "    - Output\n",
+    "        - model a, red\n",
+    "        - model a, yellow\n",
+    "        - model a, white\n",
+    "        - model b, red\n",
+    "        - model b, yellow\n",
+    "        - model b, white.\n",
+    "\n",
+    "**When not to use**\n",
+    "- Since it returns the Cartesian product, it is not advisable to use it in large tables due to the size of its output.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## SELF JOINS\n",
+    "\n",
+    "```sql\n",
+    "table_a JOIN table_a\n",
+    "```\n",
+    "\n",
+    "### Church Hierarchy table\n",
+    "- God, Pope, Cardinal, Bishop, Priest\n",
+    "\n",
+    "```\n",
+    "supervisor -> worker\n",
+    "God        -> Pope\n",
+    "Pope       -> Cardinal\n",
+    "Cardinal   -> Bishop\n",
+    "Bishop     -> Priest\n",
+    "```\n",
+    "\n",
+    "```sql\n",
+    "CREATE TABLE church_hierarchy(\n",
+    "    id SERIAL PRIMARY KEY,   -- 2\n",
+    "    position_id SERIAL,      -- 2\n",
+    "    supervisor_id INT,       -- 1\n",
+    "    position_des VARCHAR(100) -- Pope\n",
+    ");\n",
+    "\n",
+    "INSERT INTO church_hierarchy(position_des, supervisor_id)\n",
+    "    VALUES ('God', null),\n",
+    "            ('Pope', 1),\n",
+    "            ('Cardinal', 2),\n",
+    "            ('Bishop', 3),\n",
+    "            ('Priest', 4);\n",
+    "\n",
+    "SELECT w.position_des || ' -> ' || s.position_des AS \"Supervisor -> Worker\"\n",
+    "FROM church_hierarchy w\n",
+    "JOIN church_hierarchy s\n",
+    "ON  s.supervisor_id = w.position_id;\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Joining more than two tables\n",
+    "\n",
+    "```sql\n",
+    "SELECT <column-list>\n",
+    "FROM <pk-table>\n",
+    "    JOIN <fk-pk-table> ON ...\n",
+    "        JOIN <fk-table> ON ...\n",
+    "```\n",
+    "**Exercise**: Select username, first name, read status of all readers with read status 'pending'\n",
+    "\n",
+    "```sql\n",
+    "-- reader, my_read, status_percent\n",
+    "\n",
+    "SELECT DISTINCT(reader.username), first_name, read_status\n",
+    "FROM reader\n",
+    "    JOIN my_read USING(username)\n",
+    "        JOIN status_percent ON my_read.percentage_read <@ status_percent.percentage_read\n",
+    "WHERE read_status = 'pending';\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
